fixed the page on small screens

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -93,4 +93,8 @@
     z-index: 1;
     left: -120vw;
   }
+
+  .hero-container.right .background {
+    left: -40vw;
+  }
 }
